--- a/case/pandaone.html
+++ b/case/pandaone.html
@@ -43,6 +43,14 @@
     .headroom--not-top {
       background: linear-gradient(150deg, #00DA4C 15%, #00E36D 70%, #00ED8E 94%) !important;
     }
+    .btn-primary {
+      border-color: #00ED8E;
+      background-color: #00ED8E;
+  }
+  .btn-primary:hover {
+      border-color: #00E36D;
+      background-color: #00E36D;
+  }
   </style>
   <!-- Hotjar Tracking Code for design.jeffsandersjr@gmail.com -->
 <script>
@@ -62,14 +70,13 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N2ZHDPF" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <header class="header-global">
-    <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light2 headroom">
+    <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom">
       <div class="container">
-        <a class="navbar-brand mr-lg-5" href="../index.html">
-          <img src="../assets/img/brand/white.png">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="btn btn-icon btn-3 btn-primary" type="button"><a href="/portfolio/#case-studies" style="color: #fff;">
+            <span class="btn-inner--icon"><i class="fa fa-arrow-left"></i></span>
+            <span class="btn-inner--text">back to Case Studies</span></a>
         </button>
+
         <div class="navbar-collapse collapse" id="navbar_global">
           <div class="navbar-collapse-header">
             <div class="row">
@@ -86,38 +93,6 @@
               </div>
             </div>
           </div>
-          <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
-            <li class="nav-item">
-              <a href="../" class="nav-link" role="button">
-                <i class="fa fa-home d-lg-none"></i>
-                <span class="nav-link-inner--text">Home</span>
-              </a>
-            </li>
-            <!-- <li class="nav-item">
-              <a href="../design-process.html" class="nav-link" role="button">
-                <i class="fa fa-rocket d-lg-none"></i>
-                <span class="nav-link-inner--text">My Design Process</span>
-              </a>
-            </li> -->
-            <li class="nav-item">
-              <a href="../challenge/" class="nav-link" role="button">
-                <i class="fa fa-desktop d-lg-none"></i>
-                <span class="nav-link-inner--text">UI Challenges</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="../redesign/" class="nav-link" role="button">
-                <i class="fa fa-repeat d-lg-none"></i>
-                <span class="nav-link-inner--text">Redesigns</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="./about-me.html/" class="nav-link" role="button">
-                <i class="ni ni-circle-08 d-lg-none"></i>
-                <span class="nav-link-inner--text">About Me</span>
-              </a>
-            </li>
-          </ul>
           <ul class="navbar-nav align-items-lg-center ml-lg-auto">
             <li class="nav-item">
               <a class="nav-link nav-link-icon" href="https://twitter.com/jsandersjr11" target="_blank" data-toggle="tooltip" title="Follow me on Twitter">
