--- a/case/support-dashboard.html
+++ b/case/support-dashboard.html
@@ -44,12 +44,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <header class="header-global">
     <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom">
       <div class="container">
-        <a class="navbar-brand mr-lg-5" href="../index.html">
-          <img src="../assets/img/brand/white.png">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="btn btn-icon btn-3 btn-primary" type="button"><a href="/portfolio/#case-studies" style="color: #fff;">
+            <span class="btn-inner--icon"><i class="fa fa-arrow-left"></i></span>
+            <span class="btn-inner--text">back to Case Studies</span></a>
         </button>
+
         <div class="navbar-collapse collapse" id="navbar_global">
           <div class="navbar-collapse-header">
             <div class="row">
@@ -66,38 +65,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </div>
             </div>
           </div>
-          <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
-            <li class="nav-item">
-              <a href="../" class="nav-link" role="button">
-                <i class="fa fa-home d-lg-none"></i>
-                <span class="nav-link-inner--text">Home</span>
-              </a>
-            </li>
-            <!-- <li class="nav-item">
-              <a href="../design-process.html" class="nav-link" role="button">
-                <i class="fa fa-rocket d-lg-none"></i>
-                <span class="nav-link-inner--text">My Design Process</span>
-              </a>
-            </li> -->
-            <li class="nav-item">
-              <a href="../challenge/" class="nav-link" role="button">
-                <i class="fa fa-desktop d-lg-none"></i>
-                <span class="nav-link-inner--text">UI Challenges</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="../redesign/" class="nav-link" role="button">
-                <i class="fa fa-repeat d-lg-none"></i>
-                <span class="nav-link-inner--text">Redesigns</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="./about-me.html/" class="nav-link" role="button">
-                <i class="ni ni-circle-08 d-lg-none"></i>
-                <span class="nav-link-inner--text">About Me</span>
-              </a>
-            </li>
-          </ul>
           <ul class="navbar-nav align-items-lg-center ml-lg-auto">
             <li class="nav-item">
               <a class="nav-link nav-link-icon" href="https://twitter.com/jsandersjr11" target="_blank" data-toggle="tooltip" title="Follow me on Twitter">
