--- a/redesign/re_nike-running-app.html
+++ b/redesign/re_nike-running-app.html
@@ -44,9 +44,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <header class="header-global">
     <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom">
       <div class="container">
-        <button class="btn btn-icon btn-3 btn-primary" type="button"><a href="/redesign/" style="color: #fff;">
+        <button class="btn btn-icon btn-3 btn-primary" type="button"><a href="/portfolio/#case-studies" style="color: #fff;">
             <span class="btn-inner--icon"><i class="fa fa-arrow-left"></i></span>
-            <span class="btn-inner--text">back to Redesigns</span></a>
+            <span class="btn-inner--text">back to Case Studies</span></a>
         </button>
 
         <div class="navbar-collapse collapse" id="navbar_global">
